d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      name: backend-pod
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: backend-pod
          image: docker.io/amishark/expense:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: my-serviceaccount
      serviceAccount: my-serviceaccount 
      securityContext: {}
      schedulerName: default-scheduler
