backend-deployment.yaml
#backend deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  labels:
    app: expense-tracker
spec:
   replicas: 1
   selector:
     matchLabels:
      app: expense-tracker
   template:
     metadata:
        name: backend-pod
        labels:
          app: expense-tracker
     spec: 
       containers:
        - name: backend-pod 
          image: image-registry.openshift-image-registry.svc:5000/amisha-jenkins/expense-tracker-backend:latest
          ports:
           - containerPort: 5000
---
#backend-service
kind: Service 
apiVersion: v1 
metadata: 
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: expense-tracker
---
#backend-route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend-route
  namespace: amisha-jenkins
  labels:
    app: expense-tracker
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 5000
